Add Unix domain socket transport and in-container console client (#3)
* Document Unix socket transport and console client in READMEs

* refactor: move client classes to separate io.github.crramirez.casciian.spring.client package

* refactor: consolidate DEFAULT_SOCKET_PATH constant in CasciianConsoleProtocol

* Fix review issues: flush rawOut, log demux failure, remove shutdown hook, fix Javadoc link

* Refactor thread and lock handling for improved concurrency management, consolidate constant definitions, and enhance error handling consistency across TUI-related components.

* Refactor exception handling, concurrency management, and test assertions for SSH and Unix socket servers, ensure consistency in resource management, and improve code readability.

* Refactor concurrency handling using `Atomic` types for session management, replace synchronized blocks with atomic operations, simplify thread setup, improve exception handling, and enhance test assertions for Unix and SSH session streams.

* Refactor: remove unused test accessors, add nullability annotations, improve test assertions, and enhance code comments for better maintainability

* Refactor: improve test assertions format for `ProductEqualsTest` and suppress specific warning for `DEFAULT_HOST_KEY_PATH` definition in `CasciianSshProperties`.

* fix: client exits promptly when server closes connection

Use available()-based polling in pumpStdinToSocket so the stop flag
(set by the reader thread on server EOF) is noticed within ~50ms
instead of blocking indefinitely on stdin.read().

Also seed the resizer thread with the initial PTY size sent in the INIT
frame so it doesn't spuriously fire a RESIZE on its first poll cycle.

* fix: eliminate stdin polling latency by using a dedicated writer thread

Replace the available()+sleep(50ms) polling loop with a dedicated
writer thread that blocks directly on stdin.read(). When the reader
thread detects server EOF it sets the stop flag, and the subsequent
write attempt